<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/img_1"
        android:contentDescription="@string/img_des"
        android:src="@drawable/flickr"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="imgOneClick"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/cal_1"
        android:contentDescription="@string/cal"
        android:src="@drawable/cal"
        app:layout_constraintTop_toBottomOf="@+id/img_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/file_1"/>

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/upload_1"
        app:layout_constraintTop_toBottomOf="@+id/img_1"
        app:layout_constraintStart_toEndOf="@id/cal_1"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/file_1"
        android:contentDescription="@string/file"
        android:src="@drawable/doc"
        app:layout_constraintTop_toBottomOf="@+id/img_1"
        app:layout_constraintStart_toEndOf="@id/cal_1"
        app:layout_constraintEnd_toStartOf="@id/user_1"/>

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/type_1"
        app:layout_constraintTop_toBottomOf="@+id/img_1"
        app:layout_constraintStart_toEndOf="@id/file_1"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/user_1"
        android:contentDescription="@string/file"
        android:src="@drawable/info"
        app:layout_constraintTop_toBottomOf="@+id/img_1"
        app:layout_constraintStart_toEndOf="@id/file_1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:id="@+id/username_1"
        app:layout_constraintTop_toBottomOf="@+id/img_1"
        app:layout_constraintStart_toEndOf="@id/user_1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/img_2"
        android:contentDescription="@string/img_des"
        android:src="@drawable/flickr"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/cal_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="imgTwoClick" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/cal_2"
        android:contentDescription="@string/cal"
        android:src="@drawable/cal"
        app:layout_constraintTop_toBottomOf="@+id/img_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/file_2"/>

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/upload_2"
        app:layout_constraintTop_toBottomOf="@+id/img_2"
        app:layout_constraintStart_toEndOf="@id/cal_2"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/file_2"
        android:contentDescription="@string/file"
        android:src="@drawable/doc"
        app:layout_constraintTop_toBottomOf="@+id/img_2"
        app:layout_constraintStart_toEndOf="@id/cal_2"
        app:layout_constraintEnd_toStartOf="@id/user_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_2"
        app:layout_constraintTop_toBottomOf="@+id/img_2"
        app:layout_constraintStart_toEndOf="@id/file_2"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/user_2"
        android:contentDescription="@string/file"
        android:src="@drawable/info"
        app:layout_constraintTop_toBottomOf="@+id/img_2"
        app:layout_constraintStart_toEndOf="@+id/file_2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:id="@+id/username_2"
        app:layout_constraintTop_toBottomOf="@+id/img_2"
        app:layout_constraintStart_toEndOf="@+id/user_2"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/prev"
        android:contentDescription="@string/prev"
        android:src="@drawable/prev"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/refresh"
        android:onClick="prevClick"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/refresh"
        android:contentDescription="@string/refresh"
        android:src="@drawable/refresh"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/prev"
        app:layout_constraintEnd_toStartOf="@id/next"
        android:onClick="refreshClick"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/next"
        android:contentDescription="@string/next"
        android:src="@drawable/next"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="nextClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>
